[metadata]
name = monasca-event
summary = Monasca event processing 
description-file = README.rst
author = Hewlett-Packard 
home-page = https://github.com/hpcloud-mon/monasca-event
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages = monasca_event

[entry_points]
console_scripts =
    event_proc = monasca_event.main:main

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1
