[metadata]
name = monasca-events-engine
summary = Monasca event processing
author = Hewlett-Packard 
home-page = https://github.com/hpcloud-mon/monasca-events-engine
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    monasca_events_engine

[entry_points]
console_scripts =
    events_engine = monasca_events_engine.main:main

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1
